--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,5 +12,16 @@ jobs:
           submodules: true
       - uses: actions/setup-go@v1
         with:
-          go-version: '1.13' # The Go version to download (if necessary) and use.
+          go-version: '1.13'
       - run: make go-test
+  docker-build:
+    name: Build docker image
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-go@v1
+        with:
+          go-version: '1.13'
+      - uses: actions/docker/cli@master
+        with:
+          args: build -t pasdam/go-scaffold .
