--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,25 +3,25 @@ name: Continuous integration
 on: [push]
 
 jobs:
+
   test:
     name: Unit test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
           submodules: true
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
       - run: make go-test
+
   docker-build:
     name: Build docker image
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-go@v1
+      - uses: actions/checkout@v2
         with:
-          go-version: '1.13'
-      - uses: actions/docker/cli@master
-        with:
-          args: build -t pasdam/go-scaffold .
+          submodules: true
+      - name: Build the Docker image
+        run: make docker-build
