--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,7 @@ jobs:
   docker-build:
     name: Build docker image
     runs-on: ubuntu-latest
+    needs: [checks]
     steps:
       - uses: actions/checkout@v2
         with:
