--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
           path: /tmp/coverage.html
 
   docker-build:
+    if: github.ref == 'refs/heads/master'
     name: Build docker image
     runs-on: ubuntu-latest
     needs: [checks]
