--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,17 +2,25 @@ version: 2
 updates:
   - package-ecosystem: "docker"
     directory: "/"
+    reviewers:
+      - pasdam
     schedule:
       interval: "daily"
   - package-ecosystem: "gitsubmodule"
     directory: "/"
+    reviewers:
+      - pasdam
     schedule:
       interval: "daily"
   - package-ecosystem: "github-actions"
     directory: "/"
+    reviewers:
+      - pasdam
     schedule:
       interval: "daily"
   - package-ecosystem: "gomod"
     directory: "/"
+    reviewers:
+      - pasdam
     schedule:
       interval: "daily"
