build: update module name after repository migration

--- a/examples/hello-world-markdown/values.yaml
+++ b/examples/hello-world-markdown/values.yaml
@@ -2,4 +2,4 @@ project: hello-world-markdown
 intro: This is a sample template to generate a markdown file
 links:
   - name: github
-    url: https://github.com/pasdam/go-scaffold
+    url: https://github.com/go-scaffold/go-scaffold
