--- a/.github/workflows/dependabot_automerge.yml
+++ b/.github/workflows/dependabot_automerge.yml
@@ -1,4 +1,5 @@
-name: Dependabot auto-merge PR ${{ github.event.workflow_run.pull_requests[0].number }}
+name: Dependabot auto-merge
+run-name: Merging PR ${{ github.event.workflow_run.pull_requests[0].number }}
 on:
   workflow_run:
     branches:
