--- a/.github/workflows/dependabot_automerge.yml
+++ b/.github/workflows/dependabot_automerge.yml
@@ -3,8 +3,7 @@ run-name: Merging PR ${{ github.event.workflow_run.pull_requests[0].number }}
 on:
   workflow_run:
     branches:
-      - dependabot/go_modules/**
-      - dependabot/submodules/**
+      - dependabot/**
       - dependabot/docker/**
     types:
       - completed
