ci: update Dependabot auto-merge workflow

--- a/.github/workflows/dependabot_automerge.yml
+++ b/.github/workflows/dependabot_automerge.yml
@@ -4,11 +4,10 @@ on:
   workflow_run:
     branches:
       - dependabot/**
-      - dependabot/docker/**
     types:
       - completed
     workflows:
-      - 'Continuous integration'
+      - "Continuous integration"
 
 jobs:
   dependabot:
