ci: update ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,22 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - run: make go-coverage
+      - name: Coverage test
+        run: |
+          set -o pipefail
+          make go-coverage 2>&1 | tee coverage.log
+
+      - name: Generate summary
+        run: |
+          echo "# Coverage" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          cat coverage.log | grep "$(basename $PWD).*coverage:" | cut -d$'\t' -f2,4 | sed "s/\tcoverage//" | sed "s/ of statements//" >> $GITHUB_STEP_SUMMARY
+          cat coverage.log | grep "^total:" | sed "s/(statements)//" | tr -s "\t" | sed 's/\t/ /g' >> $GITHUB_STEP_SUMMARY
 
       - uses: actions/upload-artifact@v4.6.0
         with:
           name: coverage.html
-          path: /tmp/coverage.html
+          path: .build/coverage/coverage.html
 
   docker-build:
     name: Build docker image
